tests/resources/errors/errors9.ac
import std;
import std.Error;

struct TestError1 :: *Error {
    const fn get_name() -> const char* {
        return "TestError1";
    }
    const fn get_message() -> const char* {
        return "test error msg 1";
    }
}

struct TestError2 :: *Error {
    a: int64;
    b: int64;
    c: int64;
    d: int64;

    const fn get_name() -> const char* {
        return "TestError2";
    }
    const fn get_message() -> const char* {
        return "test error msg 2";
    }
}

fn foo(b: bool) | raises TestError1, TestError2 {
    std.print("foo called!");
    if b {
        raise TestError1{};
    } else {
        raise TestError2{ 65, 66, 67, 68 };
    }
}

fn write_val(val: int64) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

fn main() {
    try err: foo(true) {
        std.print("caught error!");
        std.print(err.get_message());
    };
    try err: foo(false) {
        std.print("caught error!");
        std.print(err.get_message());
        e2: TestError2* = as(TestError2*) err;
        write_val(e2.a);
        write_val(e2.b);
        write_val(e2.c);
        write_val(e2.d);
    };
}